--- a/css/mobile.css
+++ b/css/mobile.css
@@ -35,6 +35,7 @@
   }
   .mobile-nav  {
     list-style-type: none; /*to remove bullets*/
+    padding:20px 0;
   }
   li.plank{
     line-height:60px;
